--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "seo-checker",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "main.js",
+  "main": "app/main.js",
   "scripts": {},
   "keywords": [
     "electron",
