--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seo-checker",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "",
   "main": "app/main.js",
   "scripts": {},
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "electron": "^27.0.2",
+    "lighthouse": "^9.6.1",
     "puppeteer": "^21.4.1"
   }
 }
