--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seo-checker",
-  "version": "1.0.11",
-  "description": "",
+  "version": "1.1.1",
+  "description": "Testing tools",
   "main": "app/electron.js",
   "scripts": {
     "start": "electron .",
@@ -15,7 +15,7 @@
     "lighthouse"
   ],
   "build": {
-    "icon": "assets/icon_256.ico",
+    "icon": "icon/icon.ico",
     "productName": "Seo-checker",
     "mac": {
       "category": "public.app-category.developer-tools",
@@ -23,7 +23,7 @@
         "dmg",
         "zip"
       ],
-      "icon": "assets/icon_256.icns"
+      "icon": "icon/icon.icns"
     },
     "win": {
       "target": "nsis"
